# recipe-box

./: db.sqlite3  pyproject.toml
recipe/: settings.py  urls.py
recipes/: admin.py  forms.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes/templates/: forbidden.html  index.html  recipe_detail.html
